# rust-lms

./: .gitignore  docker-compose.yml
layout/: index.css  index.html  index.js
layout/blocks/: 404.html  index.css  index.html  index.js
layout/blocks/common_form/: content.html  tiny.html
layout/blocks/common_image/: closed.html  openned.html  tiny.html
layout/blocks/common_message/: closed.html  content.html  openned.html  tiny.html
layout/blocks/common_table/: closed.html  content.html  tiny.html
layout/blocks/common_video/: content.html  tiny.html
layout/blocks/js/: deserializer.js  group.js  notifier.js  window.js  windowManager.js  windowsCreator.js
layout/blocks/login/: content.html  script.js  tiny.html
layout/blocks/main_struct/: tiny.html
layout/blocks/plugin_form/: closed.html
layout/js/: windowsCreator.js
nginx/: nginx.conf
postgres/init/: scheme.sql
rust-server/: Cargo.toml  server.sh
rust-server/lms_plugin_api/: Cargo.toml
rust-server/lms_plugin_api/src/: lib.rs
rust-server/lms_plugin_api/wit/: world.wit
rust-server/plugin-system/: Cargo.toml
rust-server/plugin-system/src/: lib.rs
rust-server/plugins/: hello.wasm  not_found.wasm  sleeppy.wasm
rust-server/plugins/hello_plug/: Cargo.toml
rust-server/plugins/hello_plug/src/: lib.rs
rust-server/plugins/not_found/: Cargo.toml
rust-server/plugins/not_found/src/: lib.rs
rust-server/plugins/sleeppy/: Cargo.toml
rust-server/plugins/sleeppy/src/: lib.rs
rust-server/src/: group.rs  lib.rs  main.rs  news.rs  plugin_manager.rs  user.rs
(+18 files in other folders)
