[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mime_guess = "2.0.5"
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres = "0.7.12"
argon2 = "0.5.3"
tower-sessions = "0.13.0"
time = "0.3.36"
serde = { version = "1.0.215", features = ["derive"] }